--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -1,12 +1,27 @@
-# C# Fundamentals - Session 1
+# Dive into Interoperability, and JIT Compilation, Debugging using VS Code - Part of Microservices Series 3/120
 
-## Date: XX-XXX-2023
+## Date: 11-Sep-2023
+
+## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456840/](https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456840/)
+
+## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
+
+![Viswanatha Swamy P K |150x150](./images/S3/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
 
-> 1. To be decided
+> 1. Dive into "How it was possible to use VB.NET Library in C# Project?"
+> 1. Dive into "JIT Compilation" Process
+> 1. Showing Compiler Version `#error version`
+> 1. Introduction to Variables
+> 1. `Global namespace imports` feature
+> 1. `File-scoped namespaces` feature
+> 1. Creating a Console Application with .NET (6/7/8)
+> 1. Creating a Console Application with global.json inside folder
+> 1. Importing Namespaces
+> 1. Multiple Projects
 > 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
+> 1. What is next?
 
 ---
 
