--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -40,6 +40,10 @@
 > 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 
+![Please fasten your seat belt |150x150](./images/S3/ILDASM_Code.PNG)
+
+![Please fasten your seat belt |150x150](./images/S3/ILDASM_Code_1.PNG)
+
 ## X. Dive into understanding "What is Common Language Infrastructure?"
 
 > 1. Discussion and demo
