--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -10,9 +10,10 @@
 
 ## Agenda for this session
 
+> 1. Showing Compiler Version `#error version`
 > 1. Dive into "How it was possible to use VB.NET Library in C# Project?"
 > 1. Dive into "JIT Compilation" Process
-> 1. Showing Compiler Version `#error version`
+> 1. Dive into "Debugging using VS Code"
 > 1. Introduction to Variables
 > 1. `Global namespace imports` feature
 > 1. `File-scoped namespaces` feature
@@ -29,7 +30,11 @@
 
 ---
 
-## X. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+## 1. Showing Compiler Version `#error version`
+
+> 1. Discussion and demo
+
+## 2. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
 
@@ -39,12 +44,13 @@
 > 1. [https://learn.microsoft.com/en-us/dotnet/standard/language-independence](https://learn.microsoft.com/en-us/dotnet/standard/language-independence)
 > 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
 ![Please fasten your seat belt |150x150](./images/S3/ILDASM_Code.PNG)
 
 ![Please fasten your seat belt |150x150](./images/S3/ILDASM_Code_1.PNG)
 
-## X. Dive into understanding "What is Common Language Infrastructure?"
+## 3. Dive into understanding "JIT Compilation" Process
 
 > 1. Discussion and demo
 
@@ -52,13 +58,9 @@
 
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
-## X. Dive into understanding "JIT Compilation" Process
+## 4. Dive into understanding "Debugging using VS Code"
 
 > 1. Discussion and demo
-
-**Reference(s):**
-
-> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
 ## X. SUMMARY / RECAP / Q&A
 
