--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -64,6 +64,18 @@
 
 > 1. Discussion and demo
 
+## 5. Introduction to Variables
+
+> 1. Discussion and demo
+> 1. It default values for different types
+> 1. Variable's Size, Min and Max values
+> 1. Variable's Scope
+> 1. Variable's Lifetime
+
+## 6. Input and Output using Console
+
+> 1. Discussion and demo
+
 ## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
