--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -34,6 +34,8 @@
 
 > 1. Discussion and demo
 
+![Compler and Language Version |150x150](./images/S3/Compiler_Language_Version.PNG)
+
 ## 2. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
@@ -46,9 +48,9 @@
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
-![Please fasten your seat belt |150x150](./images/S3/ILDASM_Code.PNG)
+![IL Code |150x150](./images/S3/ILDASM_Code.PNG)
 
-![Please fasten your seat belt |150x150](./images/S3/ILDASM_Code_1.PNG)
+![IL Code |150x150](./images/S3/ILDASM_Code_1.PNG)
 
 ## 3. Dive into understanding "JIT Compilation" Process
 
@@ -59,6 +61,18 @@
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
 ## 4. Dive into understanding "Debugging using VS Code"
+
+> 1. Discussion and demo
+
+## 5. Introduction to Variables
+
+> 1. Discussion and demo
+> 1. It default values for different types
+> 1. Variable's Size, Min and Max values
+> 1. Variable's Scope
+> 1. Variable's Lifetime
+
+## 6. Input and Output using Console
 
 > 1. Discussion and demo
 
