--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -10,11 +10,11 @@
 
 ## Agenda for this session
 
-> 1. Showing Compiler Version `#error version`
 > 1. Dive into "How it was possible to use VB.NET Library in C# Project?"
 > 1. Dive into "JIT Compilation" Process
-> 1. Dive into "Debugging using VS Code"
+> 1. Showing Compiler Version `#error version`
 > 1. Multiple Projects
+> 1. Dive into "Debugging using VS Code"
 > 1. Introduction to Variables
 > 1. Importing Namespaces
 > 1. `Global namespace imports` feature
@@ -30,13 +30,7 @@
 
 ---
 
-## 1. Showing Compiler Version `#error version`
-
-> 1. Discussion and demo
-
-![Compler and Language Version |150x150](./images/S3/Compiler_Language_Version.PNG)
-
-## 2. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+## 1. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
 
@@ -52,13 +46,23 @@
 
 ![IL Code |150x150](./images/S3/ILDASM_Code_1.PNG)
 
-## 3. Dive into understanding "JIT Compilation" Process
+## 2. Dive into understanding "JIT Compilation" Process
 
 > 1. Discussion and demo
 
 **Reference(s):**
 
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
+
+## 3. Showing Compiler Version `#error version`
+
+> 1. Discussion and demo
+
+![Compler and Language Version |150x150](./images/S3/Compiler_Language_Version.PNG)
+
+## 4. Multiple Projects
+
+> 1. Discussion and demo
 
 ## 4. Dive into understanding "Debugging using VS Code"
 
