--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -12,9 +12,13 @@
 
 > 1. Dive into "How it was possible to use VB.NET Library in C# Project?"
 > 1. Dive into "JIT Compilation" Process
-> 1. Showing Compiler Version `#error version`
-> 1. Multiple Projects
+> 1. Showing Compiler Version `#error version` - A1CompilerVersionDemo.csproj
+> 1. Multiple Projects by adding A1VariablesDemo.csproj
 > 1. Dive into "Debugging using VS Code"
+>    - Adding .vscode folder
+>    - Adding settings.json and setting up "dotnet.defaultSolution": "S3.sln"
+>    - Adding launch.json
+>    - Adding tasks.json
 > 1. Introduction to Variables
 > 1. Importing Namespaces
 > 1. `Global namespace imports` feature
