--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -62,6 +62,27 @@
 
 > 1. Discussion and demo
 
+```powershell
+dotnet new sln -n S3
+
+dotnet new console -o A1CompilerVersionDemo
+dotnet sln add .\A1CompilerVersionDemo\A1CompilerVersionDemo.csproj
+dotnet restore
+dotnet build
+dotnet run --project .\A1CompilerVersionDemo\A1CompilerVersionDemo.csproj
+```
+
+```csharp
+/*
+    Description: This program will display the compiler version (4.8.0-1.23374.10 (520e2f10)) and Language version (default (11.0)).
+*/
+
+Console.WriteLine("Hello Compiler Version Demo World!");
+
+// Uncomment this line to see the compiler version
+// #error version
+```
+
 ![Compler and Language Version |150x150](./images/S3/Compiler_Language_Version.PNG)
 
 ## 4. Multiple Projects
