--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -13,7 +13,7 @@
 > 1. Dive into "How it was possible to use VB.NET Library in C# Project?"
 > 1. Dive into "JIT Compilation" Process
 > 1. Showing Compiler Version `#error version` - A1CompilerVersionDemo.csproj
-> 1. Multiple Projects by adding A1VariablesDemo.csproj
+> 1. Multiple Projects by adding A2VariablesDemo.csproj and A3InputOutputDemo.csproj
 > 1. Dive into "Debugging using VS Code"
 >    - Adding .vscode folder
 >    - Adding settings.json and setting up "dotnet.defaultSolution": "S3.sln"
@@ -85,9 +85,25 @@ Console.WriteLine("Hello Compiler Version Demo World!");
 
 ![Compler and Language Version |150x150](./images/S3/Compiler_Language_Version.PNG)
 
-## 4. Multiple Projects
+## 4. Multiple Projects by adding A2VariablesDemo.csproj and A3InputOutputDemo.csproj
 
 > 1. Discussion and demo
+
+```powershell
+dotnet new console -o A2VariablesDemo
+dotnet sln add .\A2VariablesDemo\A2VariablesDemo.csproj
+dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+dotnet restore
+dotnet build
+dotnet run --project .\A2VariablesDemo\A2VariablesDemo.csproj
+
+dotnet new console -o A3InputOutputDemo
+dotnet sln add .\A3InputOutputDemo\A3InputOutputDemo.csproj
+dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+dotnet restore
+dotnet build
+dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
+```
 
 ## 4. Dive into understanding "Debugging using VS Code"
 
