--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -17,8 +17,8 @@
 > 1. Dive into "Debugging using VS Code"
 >    - Adding .vscode folder
 >    - Adding settings.json and setting up "dotnet.defaultSolution": "S3.sln"
->    - Adding launch.json
 >    - Adding tasks.json
+>    - Adding launch.json
 > 1. Introduction to Variables
 > 1. Importing Namespaces
 > 1. `Global namespace imports` feature
@@ -105,11 +105,35 @@ dotnet build
 dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 ```
 
-## 4. Dive into understanding "Debugging using VS Code"
+## 5. Dive into "Debugging using VS Code"
 
 > 1. Discussion and demo
 
-## 5. Introduction to Variables
+### 5.1. Adding .vscode folder
+
+> 1. Discussion and demo
+
+![.VS Code Folder |150x150](./images/S3/VSCodeFolder.PNG)
+
+### 5.2. Adding settings.json and setting up "dotnet.defaultSolution": "S3.sln"
+
+> 1. Discussion and demo
+
+```json
+{
+  "dotnet.defaultSolution": "S3.sln"
+}
+```
+
+### 5.3. Adding tasks.json
+
+> 1. Discussion and demo
+
+### 5.1. Adding launch.json
+
+> 1. Discussion and demo
+
+## 6. Introduction to Variables
 
 > 1. Discussion and demo
 > 1. It default values for different types
