--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -129,9 +129,95 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 
 > 1. Discussion and demo
 
-### 5.1. Adding launch.json
+```json
+{
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "build",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "build",
+        "${workspaceFolder}/S3.sln",
+        "/property:GenerateFullPaths=true",
+        "/consoleloggerparameters:NoSummary"
+      ],
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "publish",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "publish",
+        "${workspaceFolder}/S3.sln",
+        "/property:GenerateFullPaths=true",
+        "/consoleloggerparameters:NoSummary"
+      ],
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "watch",
+      "command": "dotnet",
+      "type": "process",
+      "args": ["watch", "run", "--project", "${workspaceFolder}/S3.sln"],
+      "problemMatcher": "$msCompile"
+    }
+  ]
+}
+```
+
+### 5.4. Adding launch.json
 
 > 1. Discussion and demo
+
+```json
+{
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "A1CompilerVersionDemo - console",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build",
+      // If you have changed target frameworks, make sure to update the program path.
+      "program": "${workspaceFolder}/A1CompilerVersionDemo/bin/Debug/net8.0/A1CompilerVersionDemo.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/A1CompilerVersionDemo",
+      // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+      "console": "integratedTerminal",
+      "stopAtEntry": false
+    },
+    {
+      "name": "A2VariablesDemo - console",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build",
+      // If you have changed target frameworks, make sure to update the program path.
+      "program": "${workspaceFolder}/A2VariablesDemo/bin/Debug/net8.0/A2VariablesDemo.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/A2VariablesDemo",
+      // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+      "console": "integratedTerminal",
+      "stopAtEntry": false
+    },
+    {
+      "name": "A3InputOutputDemo - console",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build",
+      // If you have changed target frameworks, make sure to update the program path.
+      "program": "${workspaceFolder}/A3InputOutputDemo/bin/Debug/net8.0/A3InputOutputDemo.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/A3InputOutputDemo",
+      // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+      "console": "integratedTerminal",
+      "stopAtEntry": false
+    }
+  ]
+}
+```
 
 ## 6. Introduction to Variables
 
