--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -19,6 +19,7 @@
 >    - Adding settings.json and setting up "dotnet.defaultSolution": "S3.sln"
 >    - Adding tasks.json
 >    - Adding launch.json
+>    - Debugging using VS Code
 > 1. Introduction to Variables
 > 1. Importing Namespaces
 > 1. `Global namespace imports` feature
@@ -218,6 +219,12 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
   ]
 }
 ```
+
+### 5.5. Debugging using VS Code
+
+> 1. Discussion and demo
+
+![Debugging using VS Code |150x150](./images/S3/DebuggingInVSCode.PNG)
 
 ## 6. Introduction to Variables
 
