--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -254,7 +254,31 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 
 > 1. Discussion and demo
 
+### 9.1. Creating a Console Application with .NET 6
+
+> 1. Discussion and demo
+
+### 9.2. Creating a Console Application with .NET 7
+
+> 1. Discussion and demo
+
+### 9.3. Creating a Console Application with .NET 8
+
+> 1. Discussion and demo
+
 ## 10. Creating a Console Application with global.json inside folder
+
+> 1. Discussion and demo
+
+### 10.1. Creating a Console Application with .NET 6
+
+> 1. Discussion and demo
+
+### 10.2. Creating a Console Application with .NET 7
+
+> 1. Discussion and demo
+
+### 10.3. Creating a Console Application with .NET 8
 
 > 1. Discussion and demo
 
