Swamy/10sep work (#42)
* Update ViswanathaSwamyPK.PNG

* Update S3.md

* Changes

* Update S3.md

* Changes

* Update Readme.md

* Changes

* Update S3.md

* Update S3.md

* Changes

* Update S3.md

* Changes

* Changes

* Update S3.md

* Update S3.md

--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -234,7 +234,51 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 > 1. Variable's Scope
 > 1. Variable's Lifetime
 
-## 6. Input and Output using Console
+## 7. Input and Output using Console
+
+> 1. Discussion and demo
+
+## 8. Importing Namespaces
+
+> 1. Discussion and demo
+
+### 8.1. `Global namespace imports` feature
+
+> 1. Discussion and demo
+
+### 8.2. `File-scoped namespaces` feature
+
+> 1. Discussion and demo
+
+## 9. Creating a Console Application with .NET (6/7/8)
+
+> 1. Discussion and demo
+
+### 9.1. Creating a Console Application with .NET 6
+
+> 1. Discussion and demo
+
+### 9.2. Creating a Console Application with .NET 7
+
+> 1. Discussion and demo
+
+### 9.3. Creating a Console Application with .NET 8
+
+> 1. Discussion and demo
+
+## 10. Creating a Console Application with global.json inside folder
+
+> 1. Discussion and demo
+
+### 10.1. Creating a Console Application with .NET 6
+
+> 1. Discussion and demo
+
+### 10.2. Creating a Console Application with .NET 7
+
+> 1. Discussion and demo
+
+### 10.3. Creating a Console Application with .NET 8
 
 > 1. Discussion and demo
 
@@ -246,6 +290,9 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 
 ## X. What is next ?
 
-> 1. To be decided
+> 1. Dive into "JIT Compilation" Process
+> 1. Hands on with Basic / Premitive Types
+> 1. Type Inference / Implicitly Typed Local Variables
+> 1. Implicit and Explicit Conversions
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
