--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -4,7 +4,7 @@
 
 ## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456840/](https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456840/)
 
-## YouTube URL: [https://www.youtube.com/watch?v=aVIaD8PgK6g](https://www.youtube.com/watch?v=aVIaD8PgK6g)
+## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
 
 ![Viswanatha Swamy P K |150x150](./images/S3/ViswanathaSwamyPK.PNG)
 
@@ -21,7 +21,11 @@
 >    - Adding launch.json
 >    - Debugging using VS Code
 > 1. Introduction to Variables
-> 1. Input and Output using Console
+> 1. Importing Namespaces
+> 1. `Global namespace imports` feature
+> 1. `File-scoped namespaces` feature
+> 1. Creating a Console Application with .NET (6/7/8)
+> 1. Creating a Console Application with global.json inside folder
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next?
 
