--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -1,8 +1,8 @@
-# Dive into Interoperability, and JIT Compilation, Debugging using VS Code - Part of Microservices Series 3/120
+# Dive into JIT Compilation, To be decided - Part of Microservices Series 4/120
 
-## Date: 11-Sep-2023
+## Date: 02-Oct-2023
 
-## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456840/](https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456840/)
+## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456925/](https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456925/)
 
 ## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
 
