--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -234,50 +234,6 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 
 > 1. Discussion and demo
 
-## 8. Importing Namespaces
-
-> 1. Discussion and demo
-
-### 8.1. `Global namespace imports` feature
-
-> 1. Discussion and demo
-
-### 8.2. `File-scoped namespaces` feature
-
-> 1. Discussion and demo
-
-## 9. Creating a Console Application with .NET (6/7/8)
-
-> 1. Discussion and demo
-
-### 9.1. Creating a Console Application with .NET 6
-
-> 1. Discussion and demo
-
-### 9.2. Creating a Console Application with .NET 7
-
-> 1. Discussion and demo
-
-### 9.3. Creating a Console Application with .NET 8
-
-> 1. Discussion and demo
-
-## 10. Creating a Console Application with global.json inside folder
-
-> 1. Discussion and demo
-
-### 10.1. Creating a Console Application with .NET 6
-
-> 1. Discussion and demo
-
-### 10.2. Creating a Console Application with .NET 7
-
-> 1. Discussion and demo
-
-### 10.3. Creating a Console Application with .NET 8
-
-> 1. Discussion and demo
-
 ## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
@@ -287,8 +243,13 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 ## X. What is next ?
 
 > 1. Dive into "JIT Compilation" Process
-> 1. Hands on with Basic / Premitive Types
+> 1. `Global namespace imports` feature
+> 1. `File-scoped namespaces` feature
+> 1. Creating a Console Application with .NET (6/7/8)
+> 1. Creating a Console Application with global.json inside folder
+> 1. Hands on with Basic / Premitive Types, and Constants
 > 1. Type Inference / Implicitly Typed Local Variables
 > 1. Implicit and Explicit Conversions
+> 1. Boxing and Unboxing
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
