--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -247,7 +247,7 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 > 1. `File-scoped namespaces` feature
 > 1. Creating a Console Application with .NET (6/7/8)
 > 1. Creating a Console Application with global.json inside folder
-> 1. Hands on with Basic / Premitive Types, and Constants
+> 1. Hands on with Basic / Primitive Types, and Constants
 > 1. Type Inference / Implicitly Typed Local Variables
 > 1. Implicit and Explicit Conversions
 > 1. Boxing and Unboxing
