--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -1,4 +1,4 @@
-# Dive into JIT Compilation, To be decided - Part of Microservices Series 4/120
+# Dive into JIT Compilation, Console Apps in .NET 6/7/8, Primitive Types, and Type Conversions - Part of Microservices Series 4/120
 
 ## Date: 02-Oct-2023
 
@@ -15,8 +15,8 @@
 >    - `Global namespace imports` feature
 >    - `File-scoped namespaces` feature
 > 1. Creating a Console Application with .NET (6/7/8)
-> 1. Creating a Console Application with global.json inside folder
-> 1. Hands on with Basic / Premitive Types, and Constants
+> 1. Creating a Console Application with global.json inside the folder
+> 1. Hands on with Basic / Primitive Types, and Constants
 > 1. Type Inference / Implicitly Typed Local Variables
 > 1. Implicit and Explicit Conversions
 > 1. Boxing and Unboxing
@@ -87,7 +87,7 @@
 
 > 1. Discussion and demo
 
-## 5. Hands on with Basic / Premitive Types, and Constants
+## 5. Hands on with Basic / Primitive Types, and Constants
 
 > 1. Discussion and demo
 
