--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -32,7 +32,7 @@
 ## 1. Dive into understanding "JIT Compilation" Process
 
 > 1. Discussion and demo
-> 1. Pictures and demo script **(To be added)**
+> 1. **Pictures and demo script (To be added)**
 
 **Reference(s):**
 
