--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -31,31 +31,7 @@
 
 ---
 
-## 1. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
-
-> 1. Discussion and demo
-
-**Reference(s):**
-
-> 1. [https://learn.microsoft.com/en-us/dotnet/standard/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/common-type-system)
-> 1. [https://learn.microsoft.com/en-us/dotnet/standard/language-independence](https://learn.microsoft.com/en-us/dotnet/standard/language-independence)
-> 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
-> 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
-> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
-
-![IL Code |150x150](./images/S3/ILDASM_Code.PNG)
-
-![IL Code |150x150](./images/S3/ILDASM_Code_1.PNG)
-
-## 2. Dive into understanding "JIT Compilation" Process
-
-> 1. Discussion and demo
-
-**Reference(s):**
-
-> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
-
-## 3. Showing Compiler Version `#error version`
+## 1. Showing Compiler Version `#error version`
 
 > 1. Discussion and demo
 
@@ -81,6 +57,30 @@ Console.WriteLine("Hello Compiler Version Demo World!");
 ```
 
 ![Compler and Language Version |150x150](./images/S3/Compiler_Language_Version.PNG)
+
+## 2. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+
+> 1. Discussion and demo
+
+**Reference(s):**
+
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/common-type-system)
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/language-independence](https://learn.microsoft.com/en-us/dotnet/standard/language-independence)
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
+> 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
+
+![IL Code |150x150](./images/S3/ILDASM_Code.PNG)
+
+![IL Code |150x150](./images/S3/ILDASM_Code_1.PNG)
+
+## 3. Dive into understanding "JIT Compilation" Process
+
+> 1. Discussion and demo
+
+**Reference(s):**
+
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
 ## 4. Multiple Projects by adding A2VariablesDemo.csproj and A3InputOutputDemo.csproj
 
@@ -234,50 +234,6 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 
 > 1. Discussion and demo
 
-## 8. Importing Namespaces
-
-> 1. Discussion and demo
-
-### 8.1. `Global namespace imports` feature
-
-> 1. Discussion and demo
-
-### 8.2. `File-scoped namespaces` feature
-
-> 1. Discussion and demo
-
-## 9. Creating a Console Application with .NET (6/7/8)
-
-> 1. Discussion and demo
-
-### 9.1. Creating a Console Application with .NET 6
-
-> 1. Discussion and demo
-
-### 9.2. Creating a Console Application with .NET 7
-
-> 1. Discussion and demo
-
-### 9.3. Creating a Console Application with .NET 8
-
-> 1. Discussion and demo
-
-## 10. Creating a Console Application with global.json inside folder
-
-> 1. Discussion and demo
-
-### 10.1. Creating a Console Application with .NET 6
-
-> 1. Discussion and demo
-
-### 10.2. Creating a Console Application with .NET 7
-
-> 1. Discussion and demo
-
-### 10.3. Creating a Console Application with .NET 8
-
-> 1. Discussion and demo
-
 ## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
@@ -287,8 +243,13 @@ dotnet run --project .\A3InputOutputDemo\A3InputOutputDemo.csproj
 ## X. What is next ?
 
 > 1. Dive into "JIT Compilation" Process
-> 1. Hands on with Basic / Premitive Types
+> 1. `Global namespace imports` feature
+> 1. `File-scoped namespaces` feature
+> 1. Creating a Console Application with .NET (6/7/8)
+> 1. Creating a Console Application with global.json inside folder
+> 1. Hands on with Basic / Primitive Types, and Constants
 > 1. Type Inference / Implicitly Typed Local Variables
 > 1. Implicit and Explicit Conversions
+> 1. Boxing and Unboxing
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
