--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -63,13 +63,25 @@
 
 > 1. Discussion and demo
 
+```powershell
+dotnet new console -o demo3 -f net6.0
+```
+
 ### 3.2. Creating a Console Application with .NET 7
 
 > 1. Discussion and demo
 
+```powershell
+dotnet new console -o demo3 -f net7.0
+```
+
 ### 3.3. Creating a Console Application with .NET 8
 
 > 1. Discussion and demo
+
+```powershell
+dotnet new console -o demo3 -f net8.0
+```
 
 ## 4. Creating a Console Application with global.json inside folder
 
@@ -79,13 +91,28 @@
 
 > 1. Discussion and demo
 
+```powershell
+dotnet new globaljson --sdk-version 6.0.414
+dotnet new console -o net6
+```
+
 ### 4.2. Creating a Console Application with .NET 7
 
 > 1. Discussion and demo
 
+```powershell
+dotnet new globaljson --sdk-version 7.0.401
+dotnet new console -o net7
+```
+
 ### 4.3. Creating a Console Application with .NET 8
 
 > 1. Discussion and demo
+
+```powershell
+dotnet new globaljson --sdk-version 8.0.100
+dotnet new console -o net8
+```
 
 ## 5. Hands on with Basic / Primitive Types, and Constants
 
