--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -129,7 +129,10 @@ dotnet new console -o demonet8appv1
 ## X. What is next ?
 
 > 1. Basic DataTypes, Its Ranges, and Build in members
+> 1. DateTime, TimeSpan, and TimeZoneInfo
+> 1. String, StringBuilder, and String Interpolation
 > 1. Implicit and Explicit Conversions
 > 1. Boxing and Unboxing
+> 1. Parsing and Formatting
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
