Swamy/29sep work (#47)
* Update S4.md

* Update S4.md

--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -18,8 +18,6 @@
 > 1. Creating a Console Application with global.json inside the folder
 > 1. Hands on with Basic / Primitive Types, and Constants
 > 1. Type Inference / Implicitly Typed Local Variables
-> 1. Implicit and Explicit Conversions
-> 1. Boxing and Unboxing
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
 
@@ -122,14 +120,6 @@ dotnet new console -o demonet8appv1
 
 > 1. Discussion and demo
 
-## 7. Implicit and Explicit Conversions
-
-> 1. Discussion and demo
-
-## 8. Boxing and Unboxing
-
-> 1. Discussion and demo
-
 ## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
@@ -138,6 +128,11 @@ dotnet new console -o demonet8appv1
 
 ## X. What is next ?
 
-> 1. To de decided
+> 1. Basic DataTypes, Its Ranges, and Build in members
+> 1. DateTime, TimeSpan, and TimeZoneInfo
+> 1. String, StringBuilder, and String Interpolation
+> 1. Implicit and Explicit Conversions
+> 1. Boxing and Unboxing
+> 1. Parsing and Formatting
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
