--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -68,7 +68,7 @@ This two-step compilation process offers a significant advantage as it allows Mi
 > 1. Discussion and demo
 
 ```powershell
-dotnet new console -o demonet6app -f net6.0
+dotnet new console -o net6demoapp -f net6.0
 ```
 
 ### 3.2. Creating a Console Application with .NET 7
@@ -76,7 +76,7 @@ dotnet new console -o demonet6app -f net6.0
 > 1. Discussion and demo
 
 ```powershell
-dotnet new console -o demonet7app -f net7.0
+dotnet new console -o net7demoapp -f net7.0
 ```
 
 ### 3.3. Creating a Console Application with .NET 8
@@ -84,7 +84,7 @@ dotnet new console -o demonet7app -f net7.0
 > 1. Discussion and demo
 
 ```powershell
-dotnet new console -o demonet8app -f net8.0
+dotnet new console -o net8demoapp -f net8.0
 ```
 
 ## 4. Creating a Console Application with global.json inside folder
@@ -97,7 +97,7 @@ dotnet new console -o demonet8app -f net8.0
 
 ```powershell
 dotnet new globaljson --sdk-version 6.0.414
-dotnet new console -o demonet6appv1
+dotnet new console -o net6demoappv1
 ```
 
 ### 4.2. Creating a Console Application with .NET 7
@@ -106,7 +106,7 @@ dotnet new console -o demonet6appv1
 
 ```powershell
 dotnet new globaljson --sdk-version 7.0.401
-dotnet new console -o demonet7appv1
+dotnet new console -o net7demoappv1
 ```
 
 ### 4.3. Creating a Console Application with .NET 8
@@ -115,7 +115,7 @@ dotnet new console -o demonet7appv1
 
 ```powershell
 dotnet new globaljson --sdk-version 8.0.100
-dotnet new console -o demonet8appv1
+dotnet new console -o net8demoappv1
 ```
 
 ## 5. Hands on with Basic / Primitive Types, and Constants
