--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -6,7 +6,7 @@
 
 ## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
 
-![Viswanatha Swamy P K |150x150](./images/S3/ViswanathaSwamyPK.PNG)
+![Viswanatha Swamy P K |150x150](./images/S4/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
 
@@ -37,6 +37,8 @@ The dotnet CLI tool utilizes the C# compiler, known as Roslyn, to transform your
 
 This two-step compilation process offers a significant advantage as it allows Microsoft to develop Common Language Runtimes (CLRs) for various operating systems, including Linux, macOS, and Windows. Thanks to the second compilation step, which generates code tailored to the native operating system and CPU instruction set, the same IL code functions seamlessly across all platforms. Irrespective of the programming language used for the source code, whether it's C#, Visual Basic, F#, etc., all .NET applications rely on IL code for their instructions, conveniently stored within an assembly. Microsoft and other entities also offer disassembler tools like the ILSpy .NET Decompiler extension, enabling you to open an assembly and uncover its IL code.
 ```
+
+![Compilation Process |150x150](./images/S4/CompilationProcess.PNG)
 
 **Reference(s):**
 
