--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -71,7 +71,11 @@ This two-step compilation process offers a significant advantage as it allows Mi
 
 ```powershell
 dotnet new console -o net6demoapp -f net6.0
+
+dotnet sln add .\net6demoapp\net6demoapp.csproj
 ```
+
+![.NET 6 App |150x150](./images/S4/net6demoapp.PNG)
 
 ### 3.2. Creating a Console Application with .NET 7
 
