--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -73,6 +73,8 @@ This two-step compilation process offers a significant advantage as it allows Mi
 dotnet new console -o net6demoapp -f net6.0
 
 dotnet sln add .\net6demoapp\net6demoapp.csproj
+
+dotnet run --project .\net6demoapp\net6demoapp.csproj
 ```
 
 ![.NET 6 App |150x150](./images/S4/net6demoapp.PNG)
@@ -83,7 +85,13 @@ dotnet sln add .\net6demoapp\net6demoapp.csproj
 
 ```powershell
 dotnet new console -o net7demoapp -f net7.0
+
+dotnet sln add .\net7demoapp\net7demoapp.csproj
+
+dotnet run --project .\net7demoapp\net7demoapp.csproj
 ```
+
+![.NET 7 App |150x150](./images/S4/net7demoapp.PNG)
 
 ### 3.3. Creating a Console Application with .NET 8
 
