Program and Documentation Updates

--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -99,7 +99,13 @@ dotnet run --project .\net7demoapp\net7demoapp.csproj
 
 ```powershell
 dotnet new console -o net8demoapp -f net8.0
+
+dotnet sln add .\net8demoapp\net8demoapp.csproj
+
+dotnet run --project .\net8demoapp\net8demoapp.csproj
 ```
+
+![.NET 8 App |150x150](./images/S4/net8demoapp.PNG)
 
 ## 4. Creating a Console Application with global.json inside folder
 
