--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -111,23 +111,43 @@ dotnet run --project .\net8demoapp\net8demoapp.csproj
 
 > 1. Discussion and demo
 
+![Dotnet Sdks Version |150x150](./images/S4/DotnetSdks.PNG)
+
 ### 4.1. Creating a Console Application with .NET 6
 
 > 1. Discussion and demo
+> 1. Create a folder named `net6demoappv1` and open the folder in VS Code Terminal / Terminal
+> 1. Run the below commands
 
 ```powershell
-dotnet new globaljson --sdk-version 6.0.414
+dotnet new globaljson --sdk-version 6.0.414 -o ./net6demoappv1
+
 dotnet new console -o net6demoappv1
+
+dotnet sln add .\net6demoappv1\net6demoappv1.csproj
+
+dotnet run --project .\net6demoappv1\net6demoappv1.csproj
 ```
+
+![.NET 6 App |150x150](./images/S4/net6demoappv1.PNG)
 
 ### 4.2. Creating a Console Application with .NET 7
 
 > 1. Discussion and demo
+> 1. Create a folder named `net7demoappv1` and open the folder in VS Code Terminal / Terminal
+> 1. Run the below commands
 
 ```powershell
-dotnet new globaljson --sdk-version 7.0.401
+dotnet new globaljson --sdk-version 7.0.401 -o ./net7demoappv1
+
 dotnet new console -o net7demoappv1
+
+dotnet sln add .\net7demoappv1\net7demoappv1.csproj
+
+dotnet run --project .\net7demoappv1\net7demoappv1.csproj
 ```
+
+![.NET 7 App |150x150](./images/S4/net7demoappv1.PNG)
 
 ### 4.3. Creating a Console Application with .NET 8
 
