--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -116,13 +116,15 @@ dotnet run --project .\net8demoapp\net8demoapp.csproj
 ### 4.1. Creating a Console Application with .NET 6
 
 > 1. Discussion and demo
-> 1. Create a folder named `net6demoappv1` and open the folder in VS Code Terminal / Terminal
+> 1. Create a folder named `net6demoappv1`, change directory and open the folder in VS Code Terminal / Terminal
 > 1. Run the below commands
 
 ```powershell
-dotnet new globaljson --sdk-version 6.0.414 -o ./net6demoappv1
+dotnet new globaljson --sdk-version 6.0.414
 
-dotnet new console -o net6demoappv1
+dotnet new console
+
+cd ..
 
 dotnet sln add .\net6demoappv1\net6demoappv1.csproj
 
@@ -134,13 +136,15 @@ dotnet run --project .\net6demoappv1\net6demoappv1.csproj
 ### 4.2. Creating a Console Application with .NET 7
 
 > 1. Discussion and demo
-> 1. Create a folder named `net7demoappv1` and open the folder in VS Code Terminal / Terminal
+> 1. Create a folder named `net7demoappv1`, change directory and open the folder in VS Code Terminal / Terminal
 > 1. Run the below commands
 
 ```powershell
-dotnet new globaljson --sdk-version 7.0.401 -o ./net7demoappv1
+dotnet new globaljson --sdk-version 7.0.401
 
-dotnet new console -o net7demoappv1
+dotnet new console
+
+cd ..
 
 dotnet sln add .\net7demoappv1\net7demoappv1.csproj
 
