--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -156,11 +156,22 @@ dotnet run --project .\net7demoappv1\net7demoappv1.csproj
 ### 4.3. Creating a Console Application with .NET 8
 
 > 1. Discussion and demo
+> 1. Create a folder named `net8demoappv1`, change directory and open the folder in VS Code Terminal / Terminal
+> 1. Run the below commands
 
 ```powershell
-dotnet new globaljson --sdk-version 8.0.100
-dotnet new console -o net8demoappv1
+dotnet new globaljson --sdk-version 8.0.100-rc.1.23455.8
+
+dotnet new console
+
+cd ..
+
+dotnet sln add .\net8demoappv1\net8demoappv1.csproj
+
+dotnet run --project .\net8demoappv1\net8demoappv1.csproj
 ```
+
+![.NET 8 App |150x150](./images/S4/net8demoappv1.PNG)
 
 ## 5. Hands on with Basic / Primitive Types, and Constants
 
