--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -177,6 +177,22 @@ dotnet run --project .\net8demoappv1\net8demoappv1.csproj
 
 > 1. Discussion and demo
 
+```powershell
+dotnet new console -o BuildInTypesDemo
+
+dotnet sln add .\BuildInTypesDemo\BuildInTypesDemo.csproj
+
+cd BuildInTypesDemo
+
+dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+
+cd ..
+
+dotnet run --project .\BuildInTypesDemo\BuildInTypesDemo.csproj
+```
+
+![Build In Types Demo |150x150](./images/S4/BuildInTypesDemo.PNG)
+
 ## 6. Type Inference / Implicitly Typed Local Variables
 
 > 1. Discussion and demo
